--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "canvas-datagrid": "^0.22.16",
+    "chance": "^1.1.7",
+    "jszip": "^3.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.11.0",
+    "react-scripts": "3.4.3",
+    "react-spreadsheet": "^0.4.47",
+    "styled-components": "^5.1.1",
+    "typescript": "^4.0.2",
+    "x-data-spreadsheet": "^1.1.6",
+    "xlsx": "^0.16.6"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/chance": "^1.1.0",
+    "@types/styled-components": "^5.1.2"
   }
 }
