--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "canvas-datagrid": "^0.22.16",
     "chance": "^1.1.7",
-    "jszip": "^3.5.0",
+    "jszip": "2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
